# web-stt-demo

./: .env.example  .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt  start.bat  start.sh
src/api/: api.py  models.py  rest_sessions.py  ws_sessions.py
src/stt-demo/static/: script.js  style.css
src/stt-demo/templates/: index.html
src/ui/: app.py  audio_processor.py
static/: script.js
web-ivr/: .gitignore  README.md  package-lock.json  package.json  package.jsons
web-ivr/public/: app.js  index.html
web-ivr/src/: server.js
